addressed notes in pwp and proto2

--- a/proto2.tex
+++ b/proto2.tex
@@ -96,7 +96,7 @@ backtracking.
 
 This chapter discusses about how the abstract syntax and query resolver from \cite{prolog-lib} can be adapted to
 the concepts and implementation from Chapter~\ref{proto1}.
-This not only proves how generic and modular the approach from the previous chapter is but also the system working
+This not only proves how generic and modular the approach from the previous chapter is, but also the working \progLang{Prolog} system
 as a whole.
 
 
