Added to toDo list (from meeting 2-Feb).

--- a/toDo.tex
+++ b/toDo.tex
@@ -26,6 +26,9 @@
 \item [Section, Sub-section, and lower titles]
   \dots should have a leading capital only, excepting words 
   that are normally capitalized in text.
+\item [Tables, Figures, and Listings]
+  \dots should have a leading capital only, excepting words 
+  that are normally capitalized in text.
 \end{description}
 
 \section{The ``To Do'' list}
@@ -60,6 +63,11 @@
   
 \item
     Move material from \S~\ref{sec:existing-work-by-others} to \S~\ref{sec:things-fixed}. 
+
+  \item
+
+Move material from Chapters \ref{chap:quasiquotation} and~\ref{chap:metasyntacticvariables} to ``Related Concepts''.    
+    
 
 \item
   Watch out for sentences that begin with ``But''.
