added content for section 1 and recapitulation for background

--- a/background.tex
+++ b/background.tex
@@ -12,8 +12,11 @@
 
 \section{What this chapter is about}
 
-\noindent\rule{\textwidth}{0.5pt}
-%-----------------------------------------------------------------------------
+This chapter consists of information on the subject of programming languages and their classification into paradigms such as functional and 
+logic styles. Further on, we talk about the languages used for the implementations in this thesis namely \progLang{Prolog} and 
+\progLang{Haskell}. Moreover, this chapter provides a starting point for various approaches for bringing features of a different languages 
+into the same environment.
+
 
 \section{Languages and their classification}
 Programming languages fall into different categories also known as ``paradigms''.
@@ -246,6 +249,10 @@ The approaches of embedding and paradigm integration are discussed in Chapter~\r
 respectively.  
 
 \section{Chapter Recapitulation}
+
+\mehul{same as the last paragraph along with enumerations}
+
+
 
 \ifMain
 \begin{scope}
