added content and adrressed notes in chapter3

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\chapter{Current}\label{chap:proposedWork}
+\chapter{Existing work and improvements}\label{chap:proposedWork}
 %-----------------------------------------------------------------------------
 
 \textcolor{blue}{\textsl{The title of this chapter needs to change.}}
@@ -19,14 +19,14 @@ This chapter discusses the current work in done in embedding programming languag
 Specifically speaking embedding \progLang{Prolog} in \progLang{Haskell}.
 We analyze the current implementations and provide insights into the contributions of this thesis.
 
-%-----------------------------------------------------------------------------
-\noindent\rule{\textwidth}{0.5pt}
 
+\section{Section title required}
 This chapter discusses the current implementations and publications for embedding \progLang{Prolog} in languages
 and specifically \progLang{Haskell}.
 This chapter also discusses the shortcomings of the same to get a direction for improvements and contributions of
 this thesis.
-\mehul{What i want to say is that we looked at a lot of stuff and then found these problems. Now these problems are like points for improvment. Also we wanted to add some other things like monadic unification. }
+\mehul{What i want to say is that we looked at a lot of stuff and then found these problems. Now these problems are like points for 
+improvement. Also we wanted to add some other things like monadic unification. }
 
 \section{\protect{Existing Work by Others}} \label{sec:existing-work-by-others}
 
@@ -133,7 +133,8 @@ data type.
 \end{enumerate}
 
 \section{Chapter Recapitulation}
-
+Recapitulating, this chapter gives us the shortcomings of the current work which have been worked upon in this thesis. The next chapter
+provides the contributions of the thesis \mehul{which came out of our heads, new stuff! }
 
 \ifMain
 \begin{scope}
