added and removed content to chapter 4 accomplishedWork.tex

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -11,6 +11,10 @@
 %-----------------------------------------------------------------------------
 
 \section{What this chapter is about}\label{sec:what-this-chapter:accomplishedWork}
+This chapter provides the details for the conceptual contributions of this thesis along with information on the implementation of each 
+prototype. Moreover, we state the other 'soft'\mehul{surveys, making libraries work etc etc} contributions of this thesis.
+
+
 
 \section{Conceptual Advances beyond Section~\ref{sec:things-fixed}}\label{sec:advances:accomplishedWork}
 
@@ -49,7 +53,7 @@ Most languages have a recursive abstract syntax which restricts the embedded, do
 
 \subsection{What Prototype 2 contains}
 
-  (\chapterReference{proto2.1}{Prototype 2}) does the what a \progLang{Prolog} query resolver would do given a
+  (\chapterReference{proto2}{Prototype 2}) does the what a \progLang{Prolog} query resolver would do given a
   query and a knowledge base.
   The mechanism for the same is adopted from \cite{prolog-lib}.
   The embedded language is modified as per the procedure in (\chapterReference{proto1}{Prototype 1}) and the
@@ -70,6 +74,7 @@ Most languages have a recursive abstract syntax which restricts the embedded, do
   The effects are only produced only when the actions are executed.
 
 
+\begin{comment}
 \section{Thesis Improved Contributions}\label{sec:thes-impr-contr}
 
 \begin{enumerate}
@@ -100,6 +105,7 @@ how can io be squeezed into this model where whenever the resolver encounters an
 statement) which when executed would result in a side effect but till that point every thing is pure
 
 \end{enumerate}
+\end{comment}
 
 
 \section{What work was done in terms of points}\label{sec:work-in-points}
@@ -137,7 +143,7 @@ executed and hence in some way it can be controlled.
 
 
 \section{Chapter Recapitulation}
-
+Recapitulating, this chapter provides a brief look into each of the prototypes and the ideas behind them.
 
 \ifMain
 \begin{scope}
