--- a/proto3.tex
+++ b/proto3.tex
@@ -7,10 +7,11 @@
 
 
 \section{What this chapter is about}
+This chapter discusses the procedure to infuse multiple search strategies into a \progLang{Prolog} query resolver with monadic unification. 
 
-\noindent\rule{\textwidth}{0.5pt}
-%-----------------------------------------------------------------------------
 
+
+\section{Section title needed}
 When two terms are to be unified we can use Chapter~\ref{proto1},
 
 \prologConstruct{term1} and \prologConstruct{term2} are matched and an assignment is the result 
@@ -40,22 +41,22 @@ the resolver searches to create and a list of  goals and then tries to achieve e
 \cite{website:resolutionlogicwiki}
 
 
-
+\section{Backtracking}
 
 \section{Search strategies}
 The base implementation used for this prototype  is \cite{website:mini-prolog-hugs98} and below are the search
 strategies
-\section{Stack Engine}
+\subsection{Stack Engine}
 \begin{singlespace}
 \inputminted[linenos]{haskell}{haskell-proto3-sudsy-woe.hs}
 \end{singlespace}
 
-\section{Pure Engine}
+\subsection{Pure Engine}
 \begin{singlespace}
 \inputminted[linenos]{haskell}{haskell-proto3-absurd-silicon.hs}
 \end{singlespace}
 
-\section{Andorra Engine}
+\subsection{Andorra Engine}
 \begin{singlespace}
 \inputminted[linenos]{haskell}{haskell-proto3-diatomic-unbank.hs}
 \end{singlespace}
