Changes to Chapters 3 & 4.

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -36,8 +36,7 @@ prototype. Moreover, we state the other 'soft'\mehul{surveys, making libraries w
 
 Most languages have a recursive abstract syntax which restricts the embedded, domain-specific language
   \enparen{eDSL, see p.~\pageref{sec:DSL-def}}\endnote{%  
-  We have only defined ``DSL'' before.
-  \mehul{defined eDSL}
+    See Note~\eref{eDSL1}, then remove this.
 }
   in terms of its capability to \textit{open up} the language, i.e, to include meta syntactic
   variables, custom quantifiers and logic.
