--- a/embedding.tex
+++ b/embedding.tex
@@ -53,8 +53,13 @@ Moreover, it comes with an option of three engines to play
 with, but still lacks complete list support\endnote{%
   \david{What is list support?  What is complete list support?  You have not
   defined either of these terms.}\newline
-  \mehul{I forgot}.
-  \mehul{i remembered. All the different types of data types in \progLang{Prolog} are uni type just like our abstract syntax language.}
+  \mehul{I forgot}.\newline
+  \mehul{i remembered. All the different types of data types in
+    \progLang{Prolog} are uni type just like our abstract syntax
+    language.}\newline
+  \david{Are you saying that you want lists in \progLang{Prolog} to be constructed from something other than
+    the \progLang{Prolog} functors equivalent to \progLang{Haskell}'s ``\texttt{\bfseries :}'' and
+    ``\texttt{\bfseries []}''?  I think that that has far reaching consequences.}
 }
 and quite a few of practical features that \progLang{Prolog} has.
 This seems to be a common problem with the other implementation that exists, \cite{website:takashi-workplace}.
@@ -63,10 +68,12 @@ Adding fuel to fire, is the question on \progLang{Prolog}'s existence and surviv
 \cite{website:prolog-killer,website:prolog-steam,website:prolog-death,somogyi1995logic} since its use in industry
 is minimal in comparison with the languages of imperative nature.
 The purely declarative nature lacks basic requirements such as support for \languageConstruct{modules}.\endnote{%
-  Do you mean that basic \progLang{Prolog} implementations lack modules;
+  \david{Do you mean that basic \progLang{Prolog} implementations lack modules;
   or that \progLang{Prolog} lacks \languageConstruct{modules} because it is purely
-  declarative; or \dots?
-  \mehul{I do not know about the paradigm, but \progLang{Prolog} language having a declarative nature lacks modules}
+  declarative; or \dots?}\newline
+  \mehul{I do not know about the paradigm, but \progLang{Prolog} language having a declarative nature lacks
+    modules{\Huge.}}\newline
+  \david{I do not see the incompatibility between declarative languages and modules.}
 }
 The other issue is the ongoing comparison between the siblings \cite{website:haskell-choice} of the same family, the
 family of declarative languages.\endnote{%
@@ -88,10 +95,12 @@ family of declarative languages.\endnote{%
   }
 }
 Not to forget \progLang{Haskell} also has some support for logic programming \cite{website:logic-programming-haskell} which
-enables encoding of search problems.\eref{not-a-sentence} \mehul{changed}
+enables encoding of search problems.\endnote{%
+  This preceding phrase is not a sentence.
+	\mehul{changed}
+}\elabel{not-a-sentence} \mehul{changed}
 
-\section{Perhaps the section title should be ``Books related to embedding Programming Languges''}
-\textcolor{blue}{Perhaps the section title should be ``Books related to embedding Programming Languges''.}
+\section{Books related to embedding Programming Languges}
 
 As \progLang{Haskell} is relatively new in terms of being popular, its predecessors such as \progLang{Scheme} have
 explored the territory of embedding  quite profoundly \cite{friedman05reasoned}, which aims at adding a few
@@ -105,8 +114,7 @@ A general outlook towards implementing \progLang{Prolog} has also been discussed
   I do not understand what you say the references say.
 }
 
-\section{Perhaps the section title should be ``Papers related to embedding Programming Languges''}
-\textcolor{blue}{Perhaps the section title should be ``Papers related to embedding Programming Languges''.}
+\section{Papers related to embedding Programming Languges}
 
 Abundant literature can be found on embedding detailed parts of \progLang{Prolog} features such as basic
 constructs, search strategies and data types.
@@ -158,7 +166,7 @@ anything new.\endnote{%
     This is a sentence fragment.
   }\elabel{sentence-fragment} \mehul{changed}
 Specifically speaking, using \progLang{Haskell}'s type class to express general structure of a problem while the
-solutions are instances.\eref{sentence-fragment},\endnote{%
+solutions are instances.\eref{sentence-fragment}\textsuperscript{,}\endnote{%
     I do not understant the preceding sentence.
 
   }
@@ -179,27 +187,15 @@ backtracking abilities and a \haskellConstruct{monadic encapsulation} to turn a 
 \subsection{Prolog Libraries}
 
 To replicate \progLang{Prolog}-like
-capabilities \progLang{Haskell} seems to be a popular choice\endnote{%
-  Perhaps its the sentence order rather than the metaphor that is the problem here.
-  Does
-  \vspace*{-1\baselineskip}
-  \begin{quote}\slshape
-    With a host of related libraries \progLang{Haskell}
-    seems to be already in the race
-    \textbf{\upshape (or:} seems to be well-positioned\textup{)}
-    to replicate \progLang{Prolog}-like capabilities.
-  \end{quote}
-}
+capabilities \progLang{Haskell} seems to be a popular choice
 with a host of related libraries.
 First we begin with the libraries about Prolog\endnote{%
   Naked Prolog.
 }
-itself.\endnote{%
-  comma splice
-}\elabel{comma-splice}
-A few exist \cite{nanoprolog-lib} being a preliminary or
-``mini \progLang{Prolog}'' as such with not much in it to be able to be useful.\eref{comma-splice} \cite{hswip-lib}
-is all powerful but is a foreign function interface so it is ``\progLang{Prolog} in \progLang{Haskell}'' but we
+itself.
+A few exist\yyy{}{\Huge.} \cite{nanoprolog-lib} \yyy{being}{is} a preliminary or
+``mini \progLang{Prolog}'' \xxx{as such} with not much in it to be able to be useful. \cite{hswip-lib}
+is all powerful\yyy{}{\Large,} but is a foreign function interface so it is ``\progLang{Prolog} in \progLang{Haskell}'' but we
 need \progLang{Prolog} for it;
 \cite{prolog-lib}
 is the implementation that comes the closest
